--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 # AppCode recommended ignores:
 # see: http://stackoverflow.com/questions/11968531/what-to-gitignore-from-the-idea-folder
 *.iws
-*/.idea/workspace.xml
-*/.idea/tasks.xml
+.idea/workspace.xml
+.idea/tasks.xml
